[package]
name = "fscript"
version = "0.1.0"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
lazy_static = "1"
collect_result = "0.1"

[features]
debug_print_statements = []
