[package]
name = "fscript"
version = "0.1.0"
authors = ["LFalch <lucas@wasd.dk>"]
edition = "2021"
default-run = "fali"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
lazy_static = "1"
collect_result = "0.1"
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"

[features]
debug_print_statements = []
